Reestructuración de Activities y Fragments. Barrra lateral de navegación añadida y funcional. Reorganización de imports. Botón de cerrar sesión añadido. TODOs añadidos.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,7 @@
         android:roundIcon="@mipmap/mainlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApp">
-        <activity android:name=".ContenedorInicioActivity"></activity>
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".ContenedorInicioActivity"
             android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" android:screenOrientation="nosensor"/>
     </application>
 
 </manifest>
