--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     api 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
