--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,9 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     api 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.label305:asynctask:1.1.1'
 }
